refactor: personaController front consultarJefes